<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.brittlepins.brittlepins.authentication.login.LogInViewModel" />
    </data>
    
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/log_in_container"
        tools:context=".authentication.login.LogInFragment">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
    
            <LinearLayout
                android:id="@+id/log_in_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    
                <EditText
                    android:id="@+id/log_in_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:hint="@string/log_in_username_hint" />
    
                <EditText
                    android:id="@+id/log_in_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebPassword"
                    android:text="@={viewModel.password}"
                    android:hint="@string/log_in_password_hint" />
            </LinearLayout>
    
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    
            <Button
                android:id="@+id/log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/log_in_button_label" />
    
            <Button
                android:id="@+id/log_in_to_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button_label" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
